Responsive navbar down to 280px and a new look for the landing page content.

--- a/index.html
+++ b/index.html
@@ -58,14 +58,11 @@
 
 		<!-- CALL TO ACTION BUTTON. -->
 		<div class="landing-page-card">
-			<h1>Hi, my name is Brent and I do <span class="typed-js"></span>.</h1>
-			<a href="#"><button>Let's Create Your Website</button></a>
+			<h1>I make websites with <span class="typed-js"></span>.</h1>
+			<a href="#about"><button>Learn More <i class="fas fa-arrow-circle-down"></i></button></a>
 		</div>
 
-		<!-- DOWN ARROW.  -->
-		<div class="circle-down">
-			<a href="#about"><i class="fas fa-arrow-circle-down"></i></a>
-		</div>
+
 
 		<!-- MAIN CONTENT. -->
 		<main class="main-content">
