--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	  	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	  	<link rel="stylesheet" type="text/css" href="css/main.css">
 	  	<!-- GOOGLE FONT. -->
-	  	<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet"> 
+	  	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 	  	<!-- FONT AWESOME CDN. -->
 	  	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	</head>
@@ -29,7 +29,7 @@
 
 			<!-- HAMBURGER ICON. -->
 			<div>
-				<img id="hamburger" class="hamburger" src="img/hamburger.png" alt="Mobile nav icon.">	
+				<img id="hamburger" class="w-50 mx-auto" src="img/hamburger.png" alt="Mobile nav icon.">	
 			</div>
 
 			<!-- SOCIAL MEDIA ICONS. -->
@@ -44,7 +44,7 @@
 			<ul class="nav-ul">
 				<li><a class="active-link" href="#">Home</a></li>
 				<li><a href="#about">About</a></li>
-				<li><a href="#services">Services</a></li>
+				<li><a href="#myskills">My Skills</a></li>
 				<li><a href="#portfolio">Portfolio</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<!-- MOBILE SOCIAL MEDIA ICONS. -->
@@ -58,135 +58,111 @@
 
 		<!-- CALL TO ACTION BUTTON. -->
 		<div class="landing-page-card">
+			<h2>Hi, I'm Brent.</h2>
 			<h1>I make websites with <span class="typed-js"></span>.</h1>
 			<a href="#about"><button>Learn More <i class="fas fa-arrow-circle-down"></i></button></a>
 		</div>
 
-
-
 		<!-- MAIN CONTENT. -->
 		<main class="main-content">
-			
-		<!-- ABOUT ME. -->
-		<div class="container">
-			<div class="row">
-				<div class="col-12">
-					<a name="about"></a>
-						<h2 class="h2-main">About</h2>
-							<h2 class="h2-main-black">My Interests</h2>
-
-							<!-- ABOUT ME SLIDESHOW. -->
-							<div class="bd-example">
-							  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-
-							    <ol class="carousel-indicators">
-							      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-							      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-							      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-							      <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-							    </ol>
-
-							    <div class="carousel-inner" role="listbox">
-							      <div class="carousel-item active">
-							        <img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=777&amp;fg=555&amp;text=First slide" alt="First slide [900x300]" src="img/carousel-computers.jpg" data-holder-rendered="true">
-							        <div class="carousel-caption d-none d-md-block">
-							          <h3>I Love Computers</h3>
-							          <p>I am computer literate, I play games and develop cool stuff!</p>
-							        </div>
-							     </div>
-
-							      <div class="carousel-item">
-							        <img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide [900x300]" src="img/carousel-degree.jpg" data-holder-rendered="true">
-							        <div class="carousel-caption d-none d-md-block">
-							          <h3>I Love Programming</h3>
-							          <p>I have an associates in programming and I major in computer science!</p>
-							        </div>
-							      </div>
-
-							      <div class="carousel-item">
-							        <img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide [900x300]" src="img/carousel-bearded-dragons.jpg" data-holder-rendered="true">
-							        <div class="carousel-caption d-none d-md-block">
-							          <h3>I Love Bearded Dragons</h3>
-							          <p>I have my own community, <a href="https://www.facebook.com/BeardedDragonOwners/" target="_blank">@BeardedDragonOwners</a> on Facebook!</p>
-							        </div>
-							      </div>
-
-							      <div class="carousel-item">
-							        <img class="d-block w-100" data-src="holder.js/900x300?auto=yes&amp;bg=666&amp;fg=444&amp;text=Second slide" alt="Second slide [900x300]" src="img/carousel-desert.jpg" data-holder-rendered="true">
-							        <div class="carousel-caption d-none d-md-block">
-							          <h3>I Love the Desert</h3>
-							          <p>I grew up in Yucca Valley, CA.</p>
-							        </div>
-							      </div>
-
-							    </div>
-
-							    <!-- SLIDESHOW LEFT ARROW. -->
-							    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-							      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-							      <span class="sr-only">Previous</span>
-							    </a>
-
-							    <!-- SLIDESHOW RIGHT ARROW. -->
-							    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-							      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-							      <span class="sr-only">Next</span>
-							    </a>
-
-							  </div>
-							</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- SERVICES. -->
-		<div class="container">
-			<a name="services"></a>
-			<h2 class="h2-main">Services</h2>
-			<div class="row">
-				<div class="col-sm-12  col-md-6">
-					<h2 class="h2-main-black">Web Development</h2>	
-						<img class="img-center" src="img/web-development.jpg" alt="Web development.">
-							<div class="services-paragraph col-container">
-								<p class="col">I write out all the "code" from scratch while also using the latest frameworks 
-								to bring your website to life. At the moment, I am comfortable with the following languages: HTML5, CSS3, 
-								JavaScript, jQuery, Bootstrap 4, and SASS.</p>	
-							</div>
-				</div>
-				<div class="col-sm-12  col-md-6">
-					<h2 class="h2-main-black">Responsive Design</h2>	
-						<img class="img-center" src="img/responsive-design.jpg" alt="Responsive web design.">
-							<div class="services-paragraph">
-								<p>When I develop your website, I make it my priority to develop for mobile first and 
-								then I work my way towards desktop. In other words, I will make certain that your website 
-								looks good and functions properly on all devices.</p>		
-							</div>	
-				</div>
-			</div>
-		</div>
-
-		<!-- PORTFOLIO. -->
-		<div class="container">
-			<a name="portfolio"></a>
-			<h2 class="h2-main">Portfolio</h2>
-				<h2 class="h2-main-black">Website and Hybrid Apps</h2>
-				<div class="row">
-					<div class="col-sm-12 col-md-3">
-						<a href="http://www.beardeddragonowners.com/" target="_blank"><img class="w-100" src="img/bearded-dragon-owners.jpg" alt="Bearded Dragon Owners website."></a>
+			<!-- ABOUT ME. -->
+			<div class="container p-2 mt-5">
+				<a name="about"></a>
+				<h2 class="h2-brand">About Me</h2>
+					<div class="row">
+						<div class="col-sm-12 col-md-4">
+							<h2>Hobbies</h2>
+								<img src="img/about/videogames.jpg" alt="I like to play video games." class="w-100 p-1 mb-1">
+								<p class="p-1">I love to play video games, two of my favorite games are 
+								World of Warcraft and Metal Gear Solid 3: Snake Eater. Aside 
+								from video games, I enjoy building computers. Also, I have 
+								multiple Bearded Dragons, they are my favorite pet to have.</p>
+						</div>
+						<div class="col-sm-12 col-md-4">
+							<h2>Education</h2>
+								<img src="img/about/degree.jpg" alt="My degrees." class="w-100 p-1 mb-1">
+								<p class="p-1">I currently have an associate degree in computer programming. 
+								In addition, I am currently pursuing an associate degree in computer science 
+								and my goal is to transfer to a university and obtain a bachelors in 
+								computer science.</p>
+						</div>
+						<div class="col-sm-12 col-md-4">
+							<h2>Career</h2>
+								<img src="img/about/code.jpg" alt="I like to write code." class="w-100 p-1 mb-1">
+								<p class="p-1">At the end of the day, I want to make money writing code. Of course, 
+								I am very passionate when it comes to programming. At the moment, I 
+								focus on front-end web development, but my ultimate goal is to become 
+								a full-stack web developer.</p>
+						</div>
 					</div>
-					<div class="col-sm-12 col-md-3">
-						<a href="https://play.google.com/store/apps/details?id=com.syntaxlogic.brickdestroyer" target="_blank"><img class="w-100" src="img/brick-destroyer.jpg" alt="Brick Destroyer game."></a>
-					</div>	
-					<div class="col-sm-12 col-md-3">
-						<a href="https://play.google.com/store/apps/details?id=simplestopwatch.syntaxlogic" target="_blank"><img class="w-100" src="img/simple-stopwatch.jpg" alt="Simple Stopwatch hybrid app."></a>
-					</div>	
-					<div class="col-sm-12 col-md-3">
-						<a href="https://play.google.com/store/apps/details?id=com.syntaxlogic.namegenerator" target="_blank"><img class="w-100" src="img/name-generator.jpg" alt="Name Generator hybrid app."></a>
-					</div>	
-				</div>
-		</div>
+			</div>
 
+			<!-- SERVICES. -->
+			<div class="container p-2 mt-5">
+				<a name="myskills"></a>
+				<h2 class="h2-brand">My Skills</h2>
+				<p class="text-center">I am comfortable with HTML5, CSS3, JavaScript, jQuery, Bootstrap 4, and Sass.</p>
+					<div class="row">
+						<div class="col-12 d-flex justify-content-between align-content-center">
+							<img src="img/skills/html5.png" alt="html logo">
+							<img src="img/skills/css3.png" alt="css logo">
+							<img src="img/skills/javascript.png" alt="js logo">
+							<img src="img/skills/jquery.png" alt="jquery logo">
+							<img src="img/skills/bootstrap.png" alt="bootstrap logo">
+							<img src="img/skills/sass.png" alt="sass logo">
+						</div>
+						<div class="col-sm-6 col-md-6 mt-5">
+							<h2>Web Design</h2>
+								<p class="text-center">I make attractive websites for mobile and desktop devices.</p>
+								<img src="img/services/responsive-design.jpg" alt="I do responsive design." class="w-75 mx-auto">
+						</div>
+						<div class="col-sm-6 col-md-6 mt-5">
+							<h2>Web Development</h2>
+							<p class="text-center">I write the code required to bring websites to life.</p>
+								<img src="img/services/web-development.jpg" alt="I do web development." class="w-75 mx-auto">
+						</div>
+					</div>
+			</div>
+
+			<!-- PROJECTS. -->
+			<a name="portfolio"/>
+			<div class="container mt-5">
+				<h2>Portfolio</h2>
+					<p class="text-center">Here are some of my projects created with front-end web technologies.</p>
+					<div class="row">
+						<div class="col-sm-12 col-md-3">
+							<a href="http://www.beardeddragonowners.com/" target="_blank">
+								<img src="img/projects/beardeddragonowners.jpg" alt="Bearded Dragon Owners website." class="w-100 p-1">
+							</a>
+						</div>
+						<div class="col-sm-12 col-md-3">
+							<a href="https://play.google.com/store/apps/details?id=com.syntaxlogic.brickdestroyer" target="_blank">
+								<img src="img/projects/brickdestroyer.jpg" alt="Brick Destroyer hybrid app." class="w-100 p-1">	
+							</a>
+						</div>
+						<div class="col-sm-12 col-md-3">
+							<a href="https://play.google.com/store/apps/details?id=com.syntaxlogic.namegenerator" target="_blank">
+								<img src="img/projects/namegenerator.jpg" alt="Name Generator hybrid app." class="w-100 p-1">	
+							</a>
+						</div>
+						<div class="col-sm-12 col-md-3">
+							<a href="https://play.google.com/store/apps/details?id=simplestopwatch.syntaxlogic" target="_blank">
+								<img src="img/projects/simplestopwatch.jpg" alt="Simple Stopwatch hybrid app." class="w-100 p-1">	
+							</a>
+						</div>
+					</div>
+			</div>
+
+			<div class="jumbotron mt-5">
+				<h2>Let's work together, <a href="mailto:brent.pfefferle@gmail.com?Subject=Hello%20again" target="_top">Send me an email</a>!</h2>	
+			</div>
 		</main>
+
+		<!-- FOOTER. -->
+		<footer class="navbar nav">
+			<p class="text-center">&copy 2018 Brent Pfefferle.</p>
+		</footer>
+
 		<!-- Bootstrap 4 required scripts (CDN). -->
 		<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
