--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 	  	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	</head>
 
+	<!-- TOP OF PAGE LINK. -->
+	<a name="top"></a>
+
 	<body>
 		<!--  TOP HEADER BAR. -->
 		<header class="top-header">
@@ -48,8 +51,8 @@
 				<li><a href="#portfolio">Portfolio</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<!-- MOBILE SOCIAL MEDIA ICONS. -->
-				<a class="top-nav-social-media" href="#">Github <i class="fab fa-github-square"></i></a>
-				<a class="top-nav-social-media" href="#">Linkedin <i class="fab fa-linkedin"></i></a>
+				<a class="top-nav-social-media" href="https://github.com/bpfefferle" target="_blank">Github <i class="fab fa-github-square"></i></a>
+				<a class="top-nav-social-media" href="https://www.linkedin.com/in/brent-pfefferle-901444161/" target="_blank">Linkedin <i class="fab fa-linkedin"></i></a>
 			</ul>
 		</nav>
 
@@ -66,7 +69,7 @@
 		<!-- MAIN CONTENT. -->
 		<main class="main-content">
 			<!-- ABOUT ME. -->
-			<div class="container p-2 mt-5">
+			<div class="container p-2 mt-2">
 				<a name="about"></a>
 				<h2 class="h2-brand">About Me</h2>
 					<div class="row">
@@ -98,7 +101,7 @@
 			</div>
 
 			<!-- SERVICES. -->
-			<div class="container p-2 mt-5">
+			<div class="container p-2 mt-2">
 				<a name="myskills"></a>
 				<h2 class="h2-brand">My Skills</h2>
 				<p class="text-center">I am comfortable with HTML5, CSS3, JavaScript, jQuery, Bootstrap 4, and Sass.</p>
@@ -126,7 +129,7 @@
 
 			<!-- PROJECTS. -->
 			<a name="portfolio"/>
-			<div class="container mt-5">
+			<div class="container mt-2">
 				<h2>Portfolio</h2>
 					<p class="text-center">Here are some of my projects created with front-end web technologies.</p>
 					<div class="row">
@@ -153,14 +156,24 @@
 					</div>
 			</div>
 
-			<div class="jumbotron mt-5">
-				<h2>Let's work together, <a href="mailto:brent.pfefferle@gmail.com?Subject=Hello%20again" target="_top">Send me an email</a>!</h2>	
+			<a name="contact"/>
+			<div class="jumbotron mt-2">
+				<h2>Let's work together!</h2>
+						<h3 class="text-center mt-3"><a href="mailto:brent.pfefferle@gmail.com?Subject=Hello%20again" target="_top">Send email</a></h3>
+			</div>
+
+			<div class="container mt-2 mb-2">
+				<div class="row">
+					<div class="col-12">
+					 	<a href="#top"><h4 class="text-center">Back to top <i class="fas fa-arrow-up"></i></h4></a>
+					</div>
+				</div>
 			</div>
 		</main>
 
 		<!-- FOOTER. -->
 		<footer class="navbar nav">
-			<p class="text-center">&copy 2018 Brent Pfefferle.</p>
+			<p class="text-center">&copy 2018.</p>
 		</footer>
 
 		<!-- Bootstrap 4 required scripts (CDN). -->
