My skills images 3x3 grid.

--- a/index.html
+++ b/index.html
@@ -106,10 +106,12 @@
 				<h2 class="h2-brand">My Skills</h2>
 				<p class="text-center">I am comfortable with HTML5, CSS3, JavaScript, jQuery, Bootstrap 4, and Sass.</p>
 					<div class="row">
-						<div class="col-12 d-flex justify-content-between align-content-center">
+						<div class="col-12 d-flex justify-content-between align-content-center mb-2">
 							<img src="img/skills/html5.png" alt="html logo">
 							<img src="img/skills/css3.png" alt="css logo">
 							<img src="img/skills/javascript.png" alt="js logo">
+						</div>
+						<div class="col-12 d-flex justify-content-between align-content-center mt-2">
 							<img src="img/skills/jquery.png" alt="jquery logo">
 							<img src="img/skills/bootstrap.png" alt="bootstrap logo">
 							<img src="img/skills/sass.png" alt="sass logo">
