Simplified grid design for all sections.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<!-- METADATA. -->
-		<meta charset="utf-8">  <meta charset="UTF-8">
+		<meta charset="utf-8">
 		<meta name="description" content="Do you need an attractive and mobile friendly website? If so, contact me!">
 		<meta name="keywords" content="html5, css3, scss, sass, javascript, jquery, bootstrap, web developer, front-end developer,
 		front-end web developer, portfolio">
@@ -72,59 +72,46 @@
 			<div class="container p-2 mt-2">
 				<a name="about"></a>
 				<h2 class="h2-brand">About Me</h2>
+				<p class="text-center">I love to play games, learn new things, and write code.</p>
 					<div class="row">
 						<div class="col-sm-12 col-md-4">
 							<h2>Hobbies</h2>
-								<img src="img/about/videogames.jpg" alt="I like to play video games." class="w-100 p-1 mb-1">
-								<p class="p-1">I love to play video games, two of my favorite games are 
-								World of Warcraft and Metal Gear Solid 3: Snake Eater. Aside 
-								from video games, I enjoy building computers. Also, I have 
-								multiple Bearded Dragons, they are my favorite pet to have.</p>
+								<img src="img/about/videogames.jpg" alt="I like to play video games." class="w-100">
 						</div>
 						<div class="col-sm-12 col-md-4">
 							<h2>Education</h2>
-								<img src="img/about/degree.jpg" alt="My degrees." class="w-100 p-1 mb-1">
-								<p class="p-1">I currently have an associate degree in computer programming. 
-								In addition, I am currently pursuing an associate degree in computer science 
-								and my goal is to transfer to a university and obtain a bachelors in 
-								computer science.</p>
+								<img src="img/about/degree.jpg" alt="My degrees." class="w-100">
 						</div>
 						<div class="col-sm-12 col-md-4">
 							<h2>Career</h2>
-								<img src="img/about/code.jpg" alt="I like to write code." class="w-100 p-1 mb-1">
-								<p class="p-1">At the end of the day, I want to make money writing code. Of course, 
-								I am very passionate when it comes to programming. At the moment, I 
-								focus on front-end web development, but my ultimate goal is to become 
-								a full-stack web developer.</p>
+								<img src="img/about/code.jpg" alt="I like to write code." class="w-100">
 						</div>
 					</div>
 			</div>
 
 			<!-- SERVICES. -->
 			<div class="container p-2 mt-2">
-				<a name="myskills"></a>
+				<a name="myskills"/>
 				<h2 class="h2-brand">My Skills</h2>
-				<p class="text-center">I am comfortable with HTML5, CSS3, JavaScript, jQuery, Bootstrap 4, and Sass.</p>
+				<p class="text-center">I am comfortable with the following web languages and frameworks.</p>
 					<div class="row">
-						<div class="col-12 d-flex justify-content-between align-content-center mb-2">
-							<img src="img/skills/html5.png" alt="html logo">
-							<img src="img/skills/css3.png" alt="css logo">
-							<img src="img/skills/javascript.png" alt="js logo">
+						<div class="col-12 col-md-4 mt-3">
+							<img src="img/skills/HTML5.png" alt="HTML5" class="w-100">
 						</div>
-						<div class="col-12 d-flex justify-content-between align-content-center mt-2">
-							<img src="img/skills/jquery.png" alt="jquery logo">
-							<img src="img/skills/bootstrap.png" alt="bootstrap logo">
-							<img src="img/skills/sass.png" alt="sass logo">
+						<div class="col-12 col-md-4 mt-3">
+							<img src="img/skills/CSS.png" alt="CSS" class="w-100">
 						</div>
-						<div class="col-sm-6 col-md-6 mt-5">
-							<h2>Web Design</h2>
-								<p class="text-center">I make attractive websites for mobile and desktop devices.</p>
-								<img src="img/services/responsive-design.jpg" alt="I do responsive design." class="w-75 mx-auto">
+						<div class="col-12 col-md-4 mt-3">
+							<img src="img/skills/JavaScript.png" alt="JavaScript" class="w-100">
 						</div>
-						<div class="col-sm-6 col-md-6 mt-5">
-							<h2>Web Development</h2>
-							<p class="text-center">I write the code required to bring websites to life.</p>
-								<img src="img/services/web-development.jpg" alt="I do web development." class="w-75 mx-auto">
+						<div class="col-12 col-md-4 mt-3">
+							<img src="img/skills/jQuery.png" alt="jQuery" class="w-100">
+						</div>
+						<div class="col-12 col-md-4 mt-3">
+							<img src="img/skills/Bootstrap.png" alt="Bootstrap" class="w-100">
+						</div>
+						<div class="col-12 col-md-4 mt-3">
+							<img src="img/skills/SCSS.png" alt="SCSS" class="w-100">
 						</div>
 					</div>
 			</div>
@@ -132,42 +119,40 @@
 			<!-- PROJECTS. -->
 			<a name="portfolio"/>
 			<div class="container mt-2">
-				<h2>Portfolio</h2>
+				<h2 class="h2-brand">Portfolio</h2>
 					<p class="text-center">Here are some of my projects created with front-end web technologies.</p>
 					<div class="row">
-						<div class="col-sm-12 col-md-3">
+						<div class="col-sm-12 col-md-3 mt-3">
 							<a href="http://www.beardeddragonowners.com/" target="_blank">
-								<img src="img/projects/beardeddragonowners.jpg" alt="Bearded Dragon Owners website." class="w-100 p-1">
+								<img src="img/projects/beardeddragonowners.jpg" alt="Bearded Dragon Owners website." class="w-100">
 							</a>
 						</div>
-						<div class="col-sm-12 col-md-3">
+						<div class="col-sm-12 col-md-3 mt-3">
 							<a href="https://play.google.com/store/apps/details?id=com.syntaxlogic.brickdestroyer" target="_blank">
-								<img src="img/projects/brickdestroyer.jpg" alt="Brick Destroyer hybrid app." class="w-100 p-1">	
+								<img src="img/projects/brickdestroyer.jpg" alt="Brick Destroyer hybrid app." class="w-100">	
 							</a>
 						</div>
-						<div class="col-sm-12 col-md-3">
+						<div class="col-sm-12 col-md-3 mt-3">
 							<a href="https://play.google.com/store/apps/details?id=com.syntaxlogic.namegenerator" target="_blank">
-								<img src="img/projects/namegenerator.jpg" alt="Name Generator hybrid app." class="w-100 p-1">	
+								<img src="img/projects/namegenerator.jpg" alt="Name Generator hybrid app." class="w-100">	
 							</a>
 						</div>
-						<div class="col-sm-12 col-md-3">
+						<div class="col-sm-12 col-md-3 mt-3">
 							<a href="https://play.google.com/store/apps/details?id=simplestopwatch.syntaxlogic" target="_blank">
-								<img src="img/projects/simplestopwatch.jpg" alt="Simple Stopwatch hybrid app." class="w-100 p-1">	
+								<img src="img/projects/simplestopwatch.jpg" alt="Simple Stopwatch hybrid app." class="w-100">	
 							</a>
 						</div>
 					</div>
 			</div>
 
+			<!-- CONTACT. -->
 			<a name="contact"/>
-			<div class="jumbotron mt-2">
-				<h2>Let's work together!</h2>
-						<h3 class="text-center mt-3"><a href="mailto:brent.pfefferle@gmail.com?Subject=Hello%20again" target="_top">Send email</a></h3>
-			</div>
-
-			<div class="container mt-2 mb-2">
+			<div class="container">
 				<div class="row">
-					<div class="col-12">
-					 	<a href="#top"><h4 class="text-center">Back to top <i class="fas fa-arrow-up"></i></h4></a>
+					<div class="col-12 mb-5">
+						<h2 class="h2-brand">Contact</h2>
+							<h2>Let's Work Together!</h2>
+								<p class="text-center"><a href="mailto:brent.pfefferle@gmail.com?Subject=Hello%20again" target="_top">Send an email</a>.</p>
 					</div>
 				</div>
 			</div>
