Image filename changed.

--- a/index.html
+++ b/index.html
@@ -96,22 +96,22 @@
 				<p class="text-center">I am comfortable with the following web languages and frameworks.</p>
 					<div class="row">
 						<div class="col-12 col-md-4 mt-3">
-							<img src="img/skills/HTML5.png" alt="HTML5" class="w-100">
+							<img src="img/skills/html5.png" alt="HTML5" class="w-100">
 						</div>
 						<div class="col-12 col-md-4 mt-3">
-							<img src="img/skills/CSS.png" alt="CSS" class="w-100">
+							<img src="img/skills/css3.png" alt="CSS" class="w-100">
 						</div>
 						<div class="col-12 col-md-4 mt-3">
-							<img src="img/skills/JavaScript.png" alt="JavaScript" class="w-100">
+							<img src="img/skills/javascript.png" alt="JavaScript" class="w-100">
 						</div>
 						<div class="col-12 col-md-4 mt-3">
-							<img src="img/skills/jQuery.png" alt="jQuery" class="w-100">
+							<img src="img/skills/jquery.png" alt="jQuery" class="w-100">
 						</div>
 						<div class="col-12 col-md-4 mt-3">
-							<img src="img/skills/Bootstrap.png" alt="Bootstrap" class="w-100">
+							<img src="img/skills/bootstrap4.png" alt="Bootstrap" class="w-100">
 						</div>
 						<div class="col-12 col-md-4 mt-3">
-							<img src="img/skills/SCSS.png" alt="SCSS" class="w-100">
+							<img src="img/skills/sass.png" alt="SCSS" class="w-100">
 						</div>
 					</div>
 			</div>
