--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
 				<h2 class="h2-brand">About Me</h2>
 				<p class="text-center">I love to play games, learn new things, and write code.</p>
 					<div class="row">
-						<div class="col-sm-12 col-md-4">
+						<div class="col-sm-12 col-md-4 mt-3">
 							<img src="img/about/videogames.jpg" alt="I like to play video games." class="w-100">
 						</div>
-						<div class="col-sm-12 col-md-4">
+						<div class="col-sm-12 col-md-4 mt-3">
 							<img src="img/about/degree.jpg" alt="My degrees." class="w-100">
 						</div>
-						<div class="col-sm-12 col-md-4">
+						<div class="col-sm-12 col-md-4 mt-3">
 							<img src="img/about/code.jpg" alt="I like to write code." class="w-100">
 						</div>
 					</div>
