My skills logo grid.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="container p-2 mt-2">
 				<a name="about"></a>
 				<h2 class="h2-brand">About Me</h2>
-				<p class="text-center">I love to play games, learn new things, and write code.</p>
+				<p class="text-center">I love to play video games, learn new things, and develop websites.</p>
 					<div class="row">
 						<div class="col-sm-12 col-md-4 mt-3">
 							<img src="img/about/videogames.jpg" alt="I like to play video games." class="w-100">
@@ -91,24 +91,24 @@
 				<a name="myskills"/>
 				<h2 class="h2-brand">My Skills</h2>
 				<p class="text-center">I am comfortable with the following web languages and frameworks.</p>
-					<div class="row">
-						<div class="col-12 col-md-4 mt-3">
-							<img src="img/skills/html5.png" alt="HTML5" class="w-100">
+					<div class="row d-flex justify-content-center align-items-center">
+						<div class="col-12 col-md-4 mt-1">
+							<img src="img/skills/html5.png" alt="html5" class="w-50 mx-auto">
 						</div>
-						<div class="col-12 col-md-4 mt-3">
-							<img src="img/skills/css3.png" alt="CSS" class="w-100">
+						<div class="col-12 col-md-4 mt-1">
+							<img src="img/skills/css3.png" alt="css3" class="w-50 mx-auto">
 						</div>
-						<div class="col-12 col-md-4 mt-3">
-							<img src="img/skills/javascript.png" alt="JavaScript" class="w-100">
+						<div class="col-12 col-md-4 mt-1">
+							<img src="img/skills/javascript.png" alt="javascript" class="w-50 mx-auto">
 						</div>
-						<div class="col-12 col-md-4 mt-3">
-							<img src="img/skills/jquery.png" alt="jQuery" class="w-100">
+						<div class="col-12 col-md-4 mt-1">
+							<img src="img/skills/jquery.png" alt="jquery" class="w-50 mx-auto">
 						</div>
-						<div class="col-12 col-md-4 mt-3">
-							<img src="img/skills/bootstrap4.png" alt="Bootstrap" class="w-100">
+						<div class="col-12 col-md-4 mt-1">
+							<img src="img/skills/bootstrap.png" alt="bootstrap" class="w-50 mx-auto">
 						</div>
-						<div class="col-12 col-md-4 mt-3">
-							<img src="img/skills/sass.png" alt="SCSS" class="w-100">
+						<div class="col-12 col-md-4 mt-1">
+							<img src="img/skills/sass.png" alt="sass" class="w-50 mx-auto">
 						</div>
 					</div>
 			</div>
