Deleted unused images and set the image for Facebook sharing.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		front-end web developer, portfolio">
 		<meta name="author" content="Brent Pfefferle">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta property="og:image" content="img/about/code.jpg" alt="portfolio thumbnail" width="100%" height="auto">
 		<!-- TITLE OF PAGE. -->
 	  	<title>Front-End Web Developer Portfolio | Brent Pfefferle</title>
 	  	<!-- BOOTSTRAP 4 CDN. -->
