Added text to my skill logos.

--- a/index.html
+++ b/index.html
@@ -92,24 +92,30 @@
 				<a name="myskills"/>
 				<h2 class="h2-brand">My Skills</h2>
 				<p class="text-center">I am comfortable with the following web languages and frameworks.</p>
-					<div class="row d-flex justify-content-center align-items-center">
-						<div class="col-12 col-md-4 mt-1">
+					<div class="row d-flex justify-content-center align-items-baseline">
+						<div class="col-12 col-md-4 mt-3">
 							<img src="img/skills/html5.png" alt="html5" class="w-50 mx-auto">
+							<h2 class="text-center mt-2">HTML5</h2>
 						</div>
 						<div class="col-12 col-md-4 mt-1">
 							<img src="img/skills/css3.png" alt="css3" class="w-50 mx-auto">
+							<h2 class="text-center mt-2">CSS3</h2>
 						</div>
 						<div class="col-12 col-md-4 mt-1">
 							<img src="img/skills/javascript.png" alt="javascript" class="w-50 mx-auto">
+							<h2 class="text-center mt-2">JavaScript</h2>
 						</div>
 						<div class="col-12 col-md-4 mt-1">
 							<img src="img/skills/jquery.png" alt="jquery" class="w-50 mx-auto">
+							<h2 class="text-center mt-2">jQuery</h2>
 						</div>
 						<div class="col-12 col-md-4 mt-1">
 							<img src="img/skills/bootstrap.png" alt="bootstrap" class="w-50 mx-auto">
+							<h2 class="text-center mt-2">Bootstrap 4</h2>
 						</div>
 						<div class="col-12 col-md-4 mt-1">
 							<img src="img/skills/sass.png" alt="sass" class="w-50 mx-auto">
+							<h2 class="text-center mt-2">Sass</h2>
 						</div>
 					</div>
 			</div>
