Added arrow icons for send email link.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
 					<div class="col-12 mb-5">
 						<h2 class="h2-brand">Contact</h2>
 							<h2>Let's Work Together!</h2>
-								<p class="text-center"><a href="mailto:brent.pfefferle@gmail.com?Subject=Hello%20again" target="_top">Send an email</a>.</p>
+								<p class="text-center"><a href="mailto:brent.pfefferle@gmail.com?Subject=Hello%20again" target="_top">
+									<i class="fas fa-arrow-circle-right"></i> Send an email <i class="fas fa-arrow-circle-left"></i></a>.
+								</p>
 					</div>
 				</div>
 			</div>
