Removed a picture from the about section.

--- a/index.html
+++ b/index.html
@@ -73,15 +73,12 @@
 			<div class="container p-2 mt-2">
 				<a name="about"></a>
 				<h2 class="h2-brand">About Me</h2>
-				<p class="text-center">I love to play video games, learn new things, and develop websites.</p>
+				<p class="text-center">I am a programmer, it's what I love to do. Right now, I focus on front-end web development.</p>
 					<div class="row">
-						<div class="col-sm-12 col-md-4 mt-3">
-							<img src="img/about/videogames.jpg" alt="I like to play video games." class="w-100">
-						</div>
-						<div class="col-sm-12 col-md-4 mt-3">
+						<div class="col-sm-12 col-md-6 mt-3">
 							<img src="img/about/degree.jpg" alt="My degrees." class="w-100">
 						</div>
-						<div class="col-sm-12 col-md-4 mt-3">
+						<div class="col-sm-12 col-md-6 mt-3">
 							<img src="img/about/code.jpg" alt="I like to write code." class="w-100">
 						</div>
 					</div>
@@ -124,7 +121,7 @@
 			<a name="portfolio"/>
 			<div class="container mt-2">
 				<h2 class="h2-brand">Portfolio</h2>
-					<p class="text-center">Here are some of my projects created with front-end web technologies.</p>
+					<p class="text-center">Here are some projects that I have created using the latest front-end web languages and frameworks. In brief, I can develop websites and hybrid apps.</p>
 					<div class="row">
 						<div class="col-sm-12 col-md-3 mt-3">
 							<a href="http://www.beardeddragonowners.com/" target="_blank">
