Social media links for desktop.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 			<!-- SOCIAL MEDIA ICONS. -->
 			<div class="top-header-social-media">
-				<a href="#"><i class="fab fa-github-square"></i></a>
-				<a href="#"><i class="fab fa-linkedin"></i></a>
+				<a href="https://github.com/bpfefferle" target="_blank"><i class="fab fa-github-square"></i></a>
+				<a href="https://www.linkedin.com/in/brent-pfefferle-901444161/" target="_blank"><i class="fab fa-linkedin"></i></a>
 			</div>
 		</header>
 
