Updated my skills section.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
 			<div class="container p-2 mt-2">
 				<a name="about"></a>
 				<h2 class="h2-brand">About Me</h2>
-				<p class="text-center">I am a programmer, it's what I love to do. Right now, I focus on front-end web development.</p>
+				<p class="text-center">
+					I am a programmer, it's what I love to do. Right now, my primary focus is front-end web development. 
+					However, my goal is to become a full-stack web developer.
+				</p>
 					<div class="row">
 						<div class="col-sm-12 col-md-6 mt-3">
 							<img src="img/about/degree.jpg" alt="My degrees." class="w-100">
@@ -84,11 +87,12 @@
 					</div>
 			</div>
 
-			<!-- SERVICES. -->
+			<!-- SKILLS. -->
 			<div class="container p-2 mt-2">
 				<a name="myskills"/>
-				<h2 class="h2-brand">My Skills</h2>
-				<p class="text-center">I am comfortable with the following web languages and frameworks.</p>
+				<h2 class="h2-brand">MY SKILLS</h2>
+				<p class="text-center">At the moment, I offer front-end web development. In other words, I develop 
+				mobile-friendly and attractive websites using the following languages and frameworks.</p>
 					<div class="row d-flex justify-content-center align-items-baseline">
 						<div class="col-12 col-md-4 mt-3">
 							<img src="img/skills/html5.png" alt="html5" class="w-50 mx-auto">
