Added social media icons to footer.

--- a/index.html
+++ b/index.html
@@ -166,8 +166,16 @@
 		</main>
 
 		<!-- FOOTER. -->
-		<footer class="navbar nav">
-			<p class="text-center">&copy 2018.</p>
+		<footer class="d-flex justify-content-between align-items-center p-2">
+			<!-- COPYRIGHT. -->
+			<div>
+				<p>Website created by Brent Pfefferle &copy 2018.</p>
+			</div>
+			<!-- SOCIAL MEDIA ICONS. -->
+			<div class="footer-social-media">
+				<a href="https://github.com/bpfefferle" target="_blank"><i class="fab fa-github-square"></i></a>
+				<a href="https://www.linkedin.com/in/brent-pfefferle-901444161/" target="_blank"><i class="fab fa-linkedin"></i></a>
+			</div>
 		</footer>
 
 		<!-- Bootstrap 4 required scripts (CDN). -->
