--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<!--  TOP HEADER BAR. -->
 		<header class="top-header">
 			<!-- BRAND LOGO. -->
-			<a class="brand" href="index.html">BP</a>
+			<a href="index.html"><img class="my-logo" src="img/logo.png" alt="Brent Pfefferle"></a>
 
 			<!-- HAMBURGER ICON. -->
 			<div>
