--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
                                     </a>
                                 </div>
                                 <div class="project-thumbnail">
-                                    <a href="http://www.beardeddragonowners.com/" target="_blank">
-                                        <img src="img/projects/tba.jpg" alt="Bearded Dragon Owners website." class="w-100">
+                                    <a href="#" target="_blank">
+                                        <img src="img/projects/tba.jpg" alt="A project to be announced." class="w-100">
                                     </a>
                                 </div>
                                 <div class="project-thumbnail">
-                                    <a href="http://www.beardeddragonowners.com/" target="_blank">
-                                        <img src="img/projects/tba.jpg" alt="Bearded Dragon Owners website." class="w-100">
+                                    <a href="#" target="_blank">
+                                        <img src="img/projects/tba.jpg" alt="A project to be announced." class="w-100">
                                     </a>
                                 </div>
                             </div>
