--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
                                     </a>
                                 </div>
                                 <div class="project-thumbnail">
-                                    <a href="#" target="_blank">
+                                    <span>
                                         <img src="img/projects/tba.jpg" alt="A project to be announced." class="w-100">
-                                    </a>
+                                    </span>
                                 </div>
                                 <div class="project-thumbnail">
-                                    <a href="#" target="_blank">
-                                        <img src="img/projects/tba.jpg" alt="A project to be announced." class="w-100">
-                                    </a>
+                                    <span>
+                                     <img src="img/projects/tba.jpg" alt="A project to be announced." class="w-100">
+                                    </span>
                                 </div>
                             </div>
                         </div>
