--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<!-- METADATA. -->
 		<meta charset="utf-8">
 		<meta name="description" content="Do you need an attractive and mobile friendly website? If so, contact me!">
 		<meta name="keywords" content="html5, css3, scss, sass, javascript, jquery, bootstrap, web developer, front-end developer,
-		front-end web developer, portfolio">
+		front-end web developer, portfolio, california, yucca valley, high desert, morongo valley, palm springs, desert hot springs, palm desert">
 		<meta name="author" content="Brent Pfefferle">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:image" content="img/about/code.jpg" alt="portfolio thumbnail" width="100%" height="auto">
