tba changed to coming soon

--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
                                 </div>
                                 <div class="project-thumbnail">
                                     <span>
-                                        <img src="img/projects/tba.jpg" alt="A project to be announced." class="w-100">
+                                        <img src="img/projects/comingsoon.jpg" alt="A project to be announced." class="w-100">
                                     </span>
                                 </div>
                                 <div class="project-thumbnail">
                                     <span>
-                                     <img src="img/projects/tba.jpg" alt="A project to be announced." class="w-100">
+                                     <img src="img/projects/comingsoon.jpg" alt="A project to be announced." class="w-100">
                                     </span>
                                 </div>
                             </div>
