--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div class="container p-2 mt-2">
 				<a name="about"></a>
 				<h2 class="h2-brand">About Me</h2>
-				<p>
+				<p class="text-center">
 				    Hi, my name is Brent and I am a front-end web developer. In 2017, I graduated 
                     with an associates degree in computer programming. Soon after, I decided to 
                     focus on the web. In addition, I decided to pursue an associates degree in 
@@ -93,7 +93,7 @@
 			<div class="container p-2 mt-2">
 				<a name="myskills"/>
 				<h2 class="h2-brand">MY SKILLS</h2>
-				<p>At the moment, I offer front-end web development. In other words, I develop 
+				<p class="text-center">At the moment, I offer front-end web development. In other words, I develop 
 				mobile-friendly and attractive websites using the following languages and frameworks.</p>
 					<div class="row d-flex justify-content-center align-items-baseline">
 						<div class="col-12 col-md-4 mt-3">
