--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 				<a name="about"></a>
 				<h2 class="h2-brand">About Me</h2>
 				<p class="text-center">
-				    Hi, my name is Brent and I am a front-end web developer. In 2017, I graduated 
+				    Hi, my name is Brent and I am a front-end web developer based in Yucca Valley, CA. In 2017, I graduated 
                     with an associates degree in computer programming. Soon after, I decided to 
                     focus on the web. In addition, I decided to pursue an associates degree in 
-                    computer science. Overall, my goal is to become a full-stack web developer.
+                    computer science (still in progress). Overall, my goal is to become a full-stack web developer.
 				</p>
 					<div class="row">
 						<div class="col-sm-12 col-md-6 mt-3">
