--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 				<a name="about"></a>
 				<h2 class="h2-brand">About Me</h2>
 				<p class="text-center">
-				    Hi, my name is Brent and I am a front-end web developer based in Yucca Valley, CA. In 2017, I graduated 
+				    Hi, my name is Brent and I am a front-end web developer based in the High Desert of California. In 2017, I graduated 
                     with an associates degree in computer programming. Soon after, I decided to 
-                    focus on the web. In addition, I decided to pursue an associates degree in 
+                    focus on the web. In addition, I decided to pursue an associates degree for transfer in 
                     computer science (still in progress). Overall, my goal is to become a full-stack web developer.
 				</p>
 					<div class="row">
@@ -201,7 +201,7 @@
 		<footer class="d-flex justify-content-between align-items-center p-2 mt-5">
 			<!-- COPYRIGHT. -->
 			<div>
-				<p>Website created by Brent Pfefferle &copy 2018.</p>
+				<p>Website created by Brent Pfefferle &copy 2019.</p>
 			</div>
 			<!-- SOCIAL MEDIA ICONS. -->
 			<div class="footer-social-media">
