--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 				<a name="about"></a>
 				<h2 class="h2-brand">About Me</h2>
 				<p class="text-center">
-				    Hi, my name is Brent and I am a front-end web developer based in the High Desert of California. In 2017, I graduated 
-                    with an associates degree in computer programming. Soon after, I decided to 
-                    focus on the web. In addition, I decided to pursue an associates degree for transfer in 
-                    computer science (still in progress). Overall, my goal is to become a full-stack web developer.
+					Hello, my name is Brent and I am a front-end web developer with a desire to become a full-stack web developer. 
+					At the moment, I have an associate degree in computer science and computer programming. In addition, I plan to 
+					earn an associate degree in mathematics and a bachelors degree in computer science. Overall, I love to code and 
+					make beautiful websites.
 				</p>
 					<div class="row">
 						<div class="col-sm-12 col-md-6 mt-3">
