Responsive web design fixes.

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 
 			<!-- HAMBURGER ICON. -->
 			<div>
-				<img id="hamburger" class="w-50 mx-auto" src="img/hamburger.png" alt="Mobile nav icon.">	
+				<img class="hamburger" id="hamburger" src="img/hamburger.png" alt="Mobile nav icon.">	
 			</div>
 
 			<!-- SOCIAL MEDIA ICONS. -->
 			<div class="top-header-social-media">
 				<a href="https://github.com/bpfefferle" target="_blank"><i class="fab fa-github-square"></i></a>
 				<a href="https://www.linkedin.com/in/brent-pfefferle-901444161/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="mailto:brent.pfefferle@gmail.com?Subject=Hello%20again" target="_top"><i class="far fa-envelope"></i></a>
+				<a href="mailto:brent.pfefferle@gmail.com?Subject=Hello%20again" target="_top"><i class="far fa-envelope"></i></a>
 			</div>
 		</header>
 
@@ -68,16 +68,14 @@
 		</div>
 
 		<!-- MAIN CONTENT. -->
-		<main class="main-content">
+		<main class="main-content col-12">
 			<!-- ABOUT ME. -->
 			<div class="container p-2 mt-2">
 				<a name="about"></a>
-				<h2 class="h2-brand">About Me</h2>
+				<h2 class="h2-brand">About</h2>
 				<p class="text-center">
-					Hello, my name is Brent and I am a front-end web developer with a desire to become a full-stack web developer. 
-					At the moment, I have an associate degree in computer science and computer programming. In addition, I plan to 
-					earn an associate degree in mathematics and a bachelors degree in computer science. Overall, I love to code and 
-					make beautiful websites.
+					Hi, my name is Brent and I am a front-end web developer. In other words, I create beautiful websites that look 
+					good on mobile devices and desktop computers.
 				</p>
 					<div class="row">
 						<div class="col-sm-12 col-md-6 mt-3">
@@ -93,8 +91,8 @@
 			<div class="container p-2 mt-2">
 				<a name="myskills"/>
 				<h2 class="h2-brand">MY SKILLS</h2>
-				<p class="text-center">At the moment, I offer front-end web development. In other words, I develop 
-				mobile-friendly and attractive websites using the following languages and frameworks.</p>
+				<p class="text-center">I am very experienced with programming languages such as JavaScript; I am also 
+					experienced with other web technologies such as HTML, CSS, Bootstrap, and so on.</p>
 					<div class="row d-flex justify-content-center align-items-baseline">
 						<div class="col-12 col-md-4 mt-3">
 							<img src="img/skills/html5.png" alt="html5" class="w-50 mx-auto">
