About me and Education

--- a/index.html
+++ b/index.html
@@ -74,15 +74,28 @@
 				<a name="about"></a>
 				<h2 class="h2-brand">About</h2>
 				<p class="text-center">
-					Hi, my name is Brent and I am a front-end web developer. In other words, I create beautiful websites that look 
-					good on mobile devices and desktop computers.
+					I am a front-end web developer (with a desire to become full-stack). For now, I create beautiful websites that look 
+					good on mobile devices and desktop computers. Overall, web development has become a passion for me.
 				</p>
 					<div class="row">
-						<div class="col-sm-12 col-md-6 mt-3">
-							<img src="img/about/degree.jpg" alt="My degrees." class="w-100">
-						</div>
-						<div class="col-sm-12 col-md-6 mt-3">
+						<div class="col-12">
 							<img src="img/about/code.jpg" alt="I like to write code." class="w-100">
+						</div>
+					</div>
+			</div>
+
+			<!-- ABOUT ME. -->
+			<div class="container p-2 mt-2">
+				<a name="about"></a>
+				<h2 class="h2-brand">Education</h2>
+				<p class="text-center">
+					Over the past several years, I have spent a lot of time pursuing multiple associate degrees. For example, I have 
+					an associate degree in computer science, computer programming, and mathematics. As you read this now, I am currently 
+					pursuing a bachelors in computer science. Overall, I would say so myself that I am very committed and trustworthy.
+				</p>
+					<div class="row">
+						<div class="col-12">
+							<img src="img/about/degree.jpg" alt="My degrees." class="w-100">
 						</div>
 					</div>
 			</div>
