--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 								<div class="card" >
 									<img class="card-img-top" src="img/projects/beardeddragonowners.jpg" alt="Card image cap">
 									<div class="card-body">
-									  <h5 class="card-title">Bearded Dragon Owners WEBSITE</h5>
+									  <h5 class="card-title">Bearded Dragon Owners Website</h5>
 									  <p class="card-text p-2">Bearded Dragon Owners is an informative website that teaches people 
 										  about proper Bearded Dragon care, this site was created by me for my followers on 
 										  social media.
@@ -254,7 +254,7 @@
 								<div class="card" >
 									<img class="card-img-top" src="img/projects/randomnamegenerator.jpg" alt="Card image cap">
 									<div class="card-body">
-									  <h5 class="card-title">RANDOM NAME GENERATOR</h5>
+									  <h5 class="card-title">Random Name Generator</h5>
 									  <p class="card-text p-2">Using JavaScript, I created a name generator for my followers on 
 										  Bearded Dragon Owners.
 									  </p>
