--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="HTML, CSS, JavaScript, HTML5 canvas, canvas, es6, tic-tac-toe, tic tac toe, html5 game">
         <meta name="author" content="Brent Pfefferle">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="tic-tac-toe.css"> <!-- Main CSS -->
+        <link rel="stylesheet" href="css/tic-tac-toe.css"> <!-- Main CSS -->
     </head>
     <body>
         <canvas id="text"></canvas> <!-- Canvas window for game text -->
