link to github repo
updated project path href

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </div>
                     <!-- PROJECT 3 -->
                     <div class="item3 hvr-grow">
-                        <a href="tic-tac-toe.html" target="_blank"><img src="img/projects/tic-tac-toe.jpg" alt="Project 3 image"></a>
+                        <a href="https://github.com/bpfefferle/html5-canvas-tic-tac-toe" target="_blank"><img src="img/projects/tic-tac-toe.jpg" alt="Project 3 image"></a>
                     </div>
                 </div>
             </div>
