--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		front-end web developer, portfolio, california, yucca valley, high desert, morongo valley, palm springs, desert hot springs, palm desert">
 		<meta name="author" content="Brent Pfefferle">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta property="og:image" content="img/about/code.jpg" alt="portfolio thumbnail" width="100%" height="auto">
+		<meta property="og:image" content="img/code.jpg" alt="portfolio thumbnail" width="100%" height="auto">
 		<!-- TITLE OF PAGE. -->
 	  	<title>Web Developer Portfolio | Brent Pfefferle</title>
 	  	<!-- BOOTSTRAP 4 CDN. -->
