--- a/index.html
+++ b/index.html
@@ -50,63 +50,48 @@
                         <br><br>
                         I got my start at Copper Mountain College in Joshua Tree, California. From 
                         there, I graduated with an associate's degree in computer science and 
-                        mathematics. Then, I transferred to California State University in Fullerton, 
-                        California! After the fall 2022 semester at CSUF, I will have graduated with 
-                        my bachelor's degree in computer science!
+                        mathematics. Then, I transferred to California State University Fullerton in 
+                        Fullerton, CA.
                         <br><br>
-                        Besides web development, I also enjoy topics such as game development! In fact, 
-                        I enjoy writing HTML5 games using the canvas element or HTML5 game frameworks like 
-                        Phaser!
+                        At the moment, I am seeking entry-level work as a software engineer! More specifically, 
+                        a role in front-end web development or even full-stack!
                         <img id="pic-degree" src="img/about/brent2.jpg" alt="Picture of Brent Pfefferle"> 
                     </p>
                 </header>
             </div>
             <!-- MY SKILLS -->
             <div class="skills">
-                <h2>Front-End Skills</h2>
-                <p>I am proficient with front-end development!</p>
+                <h2>Technical Skills</h2>
+                <p>I am comfortable with the following!</p>
                     <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                        <li>Bootstrap</li>
-                        <li>SCSS</li>
-                        <li>React</li>
-                        <li>jQuery</li>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>JavaScript (ES6)</li>
+                        <li>Bootstrap 5</li>
+                        <li>SCSS (Sass)</li>
                         <li>Jekyll</li>
-                    </ul>
-                <h2>Back-End Skills</h2>
-                <p>I am good with back-end technologies!</p>
-                    <ul>
                         <li>Python</li>
-                        <li>SQL</li>
-                        <li>Quart/Flask</li>
-                        <li>RESTful APIs</li>
+                        <li>SQLite</li>
+                        <li>Flask</li>
                     </ul>
-                <h2>Other Skills</h2>
                 <p>I am familiar with the following!</p>
                     <ul>
-                        <li>HTML5 canvas</li>
-                        <li>Phaser js</li>
                         <li>C++</li>
                         <li>Git</li>
-                        <li>Windows</li>
                         <li>Linux</li>
-                        <li>Adobe Photoshop</li>
-                        <li>Sony Vegas</li>
-                        <li>Social media management</li>
+                        <li>React</li>
                     </ul>
                 <h2>Soft Skills</h2>
-                <p>I work great with people and can take the responsibility to 
-                    lead a developer team to success!
-                </p>
+                <p>I work great with people and I enjoy leadership roles!</p>
                     <ul>
-                        <li>Communication</li>
-                        <li>Time management</li>
-                        <li>Critical thinking</li>
-                        <li>Problem solving</li>
-                        <li>Fast learner</li>
                         <li>Teamwork</li>
+                        <li>Leadership</li>
+                        <li>Interpersonal communication</li>
+                        <li>Public speaking</li>
+                        <li>Time management</li>
+                        <li>Problem-solving</li>
+                        <li>Attention to detail</li>
+                        <li>Creativity</li>
                     </ul>
             </div>
             <!-- PARTICLE JS CONTAINER -->
