--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                         <li>Python</li>
                         <li>SQLite</li>
                         <li>Flask</li>
+                        <li>REST</li>
                     </ul>
                 <p>I am familiar with the following!</p>
                     <ul>
